--- a/css/styles.css
+++ b/css/styles.css
@@ -5,17 +5,36 @@
   text-align: center;
 }
 
+html {
+  scroll-behavior: smooth;
+}
 
 body {
-  background: #f0e581;
+  background: #e9e8dd;
   font-size: 14px;
   line-height: 150%;
   color: #555555;
+  margin-top: 0;
+}
+
+.main {
+  width: 100%;
+  display: flex;
+  margin: 0 auto;
 }
 
 main {
-  width: 1000px;
+  max-width: 1000px;
+  width: 100%;
   height: auto;
+  display: flex;
+  margin: 0 auto;
+  margin-top: 0;
+  justify-content: space-around;
+}
+
+.footer {
+  width: 100%;
   display: flex;
   margin: 0 auto;
 }
@@ -29,18 +48,18 @@ footer {
   align-content: center;
   align-items: center;
   flex-wrap: wrap;
-  background: #ca7a12;
+  background: #718087;
   box-sizing: border-box;
 }
 
-nav {
+aside {
   width: 400px;
   padding: 6px 14px;
-  background: #1db3d8;
+  background: #5ba4e5;
   color: #ffffff;
 }
 
-nav h2 {
+aside h2 {
   font-size: 16px;
   text-align: left;
   text-transform: uppercase;
@@ -52,6 +71,11 @@ nav h2 {
   margin-left: 20px;
 }
 
+.years {
+  text-align: left;
+  margin-bottom: 1px;
+}
+
 .cv_identity {
   font-weight: 500;
   font-size: 18px;
@@ -60,10 +84,18 @@ nav h2 {
   color: #000000;
 }
 
+.summary figure {
+  max-width: 100%;
+  align-items: center;
+  position: relative;
+}
+
 .cv_profile_photo {
-  height: 200px;
-  width: auto;
-  border-radius: 50%;
+  max-height: 300px;
+  max-width: 225px;
+  height: auto;
+  width: 100%;
+  border-radius: 10%;
 }
 
 li {
@@ -122,12 +154,16 @@ li {
   line-height: 30%;
 }
 
-.cv_experience article h2 {
+.cv_experience section h2 {
   text-transform: uppercase;
 }
 
+.cv_experience section {
+  border-bottom-color: #000000;
+}
+
 .cv_experience {
-  width: 520px;
+  width: 600px;
   background: #ffffff;
   padding: 25px;
   list-style: inside;
@@ -162,7 +198,7 @@ li {
   left: -25px;
   width: 6px;
   height: 6px;
-  background: #ff7f50;
+  background: #b22746;
   border-radius: 50%;
   border: 2px solid #0b0f11;
 }
@@ -177,17 +213,37 @@ li {
   background: #202c30;
 }
 
-.cv_summary h2 {
-  margin-top: 50px;
+section {
+  border-top: 45px solid transparent;
+  border-bottom: 2px solid #ffffff;
+}
+
+aside .cv_nav_content section:last-child,
+.cv_experience div:last-child section {
+  border-bottom-color: transparent;
+}
+
+aside .cv_nav_content section,
+.cv_experience section {
+  padding-bottom: 43px;
 }
 
 .cv_summary p {
   flex-shrink: 0;
   margin: 20px;
   border: solid transparent;
-  box-shadow: 0 0 3px 3px #00000080;
+  box-shadow: 0 0 3px 3px #000000;
   border-radius: 10%;
   padding: 15px;
+}
+
+.cv_summary {
+  border-top-width: 0;
+  border-bottom: 2px solid #ffffff;
+}
+
+.experience {
+  border-top-width: 0;
 }
 
 .footer_logo img {
@@ -197,9 +253,165 @@ li {
 
 .footer_year p {
   font-size: 32px;
+  color: #ffffff;
+}
+
+code {
+  text-align: left;
 }
 
 .footer_github img {
   height: 50px;
   width: auto;
 }
+
+.header {
+  width: 100%;
+  display: flex;
+  margin: 0 auto;
+  position: sticky;
+  top: -1px;
+  transition: top 0.3s;
+  z-index: 3;
+}
+
+header {
+  width: 1000px;
+  height: auto;
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-around;
+  align-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+}
+
+.navbar {
+  width: 100%;
+  max-width: 1000px;
+  box-sizing: border-box;
+  height: 45px;
+  background-color: #718087;
+  overflow: auto;
+}
+
+.navbar a {
+  float: left;
+  padding: 12px;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 17px;
+  box-sizing: border-box;
+  width: 14.28%;
+  text-align: center;
+}
+
+.navbar a:not(:first-child):hover {
+  background-color: #4d9db3;
+}
+
+.navbar a.active {
+  background-color: #9fbb58;
+}
+
+.navbar .dropdown {
+  display: none;
+}
+
+.phys_projects {
+  display: table;
+  border-spacing: 5px;
+}
+
+.phys_projects div {
+  border: 2px dashed #000000;
+  height: 100%;
+  display: table-cell;
+}
+
+.phys_projects img {
+  max-width: 200px;
+  height: auto;
+  width: 100%;
+}
+
+.phys_projects figure {
+  margin: 5px;
+}
+
+.phys_projects figcaption {
+  padding: 5px;
+}
+
+@media (max-width: 1000px) {
+  main {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    justify-content: center;
+  }
+
+  aside {
+    width: 100%;
+    margin: 0 auto;
+    display: block;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    box-sizing: border-box;
+  }
+
+  .cv_experience {
+    width: 100%;
+    margin: 0 auto;
+    justify-content: center;
+    box-sizing: border-box;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .navbar a {
+    float: none;
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    text-align: left;
+    position: relative;
+  }
+
+  .navbar a:not(:first-child) {
+    display: none;
+  }
+
+  .navbar .dropdown {
+    display: block;
+  }
+
+  .navbar.responsive {
+    height: auto;
+    top: 0;
+  }
+
+  .navbar.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+  }
+
+  .navbar.responsive a:not(:first-child):hover {
+    background-color: #e9e8dd;
+  }
+
+  .phys_projects {
+    display: block;
+  }
+
+  .phys_projects div {
+    display: inherit;
+    margin: 5px auto;
+  }
+}
+
